--- a/addons/l10n_ar_withholding/i18n/es_419.po
+++ b/addons/l10n_ar_withholding/i18n/es_419.po
@@ -25,6 +25,36 @@ msgstr ""
 "retenciones (AR)."
 
 #. module: l10n_ar_withholding
+#. odoo-python
+#: code:addons/l10n_ar_withholding/wizards/l10n_ar_payment_register_withholding.py:0
+msgid ""
+"%(base_amount)s + %(same_period_base)s - %(non_taxable_amount)s = %(result)s"
+" (it should not be applied)"
+msgstr ""
+"%(base_amount)s + %(same_period_base)s - %(non_taxable_amount)s = %(result)s"
+" (no debería ser aplicado)"
+
+#. module: l10n_ar_withholding
+#. odoo-python
+#: code:addons/l10n_ar_withholding/wizards/l10n_ar_payment_register_withholding.py:0
+msgid ""
+"(Base amount + Accumulated base from previous payments - Non-taxable minimum"
+" - Scale threshold) * Scale rate + Fixed amount (from scale) - Withholdings "
+"already applied during the period"
+msgstr ""
+"(Importe base + Base pagos anteriores - Mínimo no imponible - Base de la "
+"escala) * Alícuota de la escala + Monto fijo escala - Retenciones ya "
+"aplicadas en el período"
+
+#. module: l10n_ar_withholding
+#. odoo-python
+#: code:addons/l10n_ar_withholding/wizards/l10n_ar_payment_register_withholding.py:0
+msgid ""
+"(Base amount + Accumulated base from previous payments - Non-taxable "
+"minimum) * Rate - Withholdings already applied during the period"
+msgstr ""
+
+#. module: l10n_ar_withholding
 #: model_terms:ir.ui.view,arch_db:l10n_ar_withholding.view_afip_earnings_table_scale_form
 msgid ""
 "<b><u>AFIP Sources</u></b><br/>\n"
@@ -46,6 +76,16 @@ msgid ""
 msgstr ""
 "<br/>\n"
 "                    <span>Enlace a AFIP información adicional: </span>"
+
+#. module: l10n_ar_withholding
+#. odoo-python
+#: code:addons/l10n_ar_withholding/wizards/l10n_ar_payment_register_withholding.py:0
+msgid ""
+"<li title=\"Calculation formula: %(formula_str)s\">%(tax_name)s: "
+"%(ref)s</li>"
+msgstr ""
+"<li title=\"Fórmula de cálculo: %(formula_str)s\">%(tax_name)s: "
+"%(ref)s</li>"
 
 #. module: l10n_ar_withholding
 #: model_terms:ir.ui.view,arch_db:l10n_ar_withholding.report_payment_receipt_document
@@ -148,6 +188,12 @@ msgid "Argentinean Partner Taxes"
 msgstr "Impuestos argentinos del contacto"
 
 #. module: l10n_ar_withholding
+#: model:ir.model.fields,field_description:l10n_ar_withholding.field_res_partner__l10n_ar_partner_perception_ids
+#: model:ir.model.fields,field_description:l10n_ar_withholding.field_res_users__l10n_ar_partner_perception_ids
+msgid "Argentinean Perception Taxes"
+msgstr "Percepciones de impuestos argentinos"
+
+#. module: l10n_ar_withholding
 #: model:ir.model.fields,field_description:l10n_ar_withholding.field_res_partner__l10n_ar_partner_tax_ids
 #: model:ir.model.fields,field_description:l10n_ar_withholding.field_res_users__l10n_ar_partner_tax_ids
 msgid "Argentinean Withholding Taxes"
@@ -192,7 +238,7 @@ msgstr "Importe de Cheques"
 #. module: l10n_ar_withholding
 #: model:ir.model,name:l10n_ar_withholding.model_res_company
 msgid "Companies"
-msgstr "Empresas"
+msgstr "Compañías"
 
 #. module: l10n_ar_withholding
 #: model:ir.model.fields,field_description:l10n_ar_withholding.field_l10n_ar_partner_tax__company_id
@@ -203,7 +249,7 @@ msgstr "Empresa"
 #. module: l10n_ar_withholding
 #: model:ir.model,name:l10n_ar_withholding.model_res_config_settings
 msgid "Config Settings"
-msgstr "Ajustes de configuración"
+msgstr "Opciones de configuración"
 
 #. module: l10n_ar_withholding
 #: model:ir.model,name:l10n_ar_withholding.model_res_partner
@@ -211,6 +257,7 @@ msgid "Contact"
 msgstr "Contacto"
 
 #. module: l10n_ar_withholding
+#: model:ir.model.fields,field_description:l10n_ar_withholding.field_account_fiscal_position_l10n_ar_tax__create_uid
 #: model:ir.model.fields,field_description:l10n_ar_withholding.field_l10n_ar_earnings_scale__create_uid
 #: model:ir.model.fields,field_description:l10n_ar_withholding.field_l10n_ar_earnings_scale_line__create_uid
 #: model:ir.model.fields,field_description:l10n_ar_withholding.field_l10n_ar_partner_tax__create_uid
@@ -219,6 +266,7 @@ msgid "Created by"
 msgstr "Creado por"
 
 #. module: l10n_ar_withholding
+#: model:ir.model.fields,field_description:l10n_ar_withholding.field_account_fiscal_position_l10n_ar_tax__create_date
 #: model:ir.model.fields,field_description:l10n_ar_withholding.field_l10n_ar_earnings_scale__create_date
 #: model:ir.model.fields,field_description:l10n_ar_withholding.field_l10n_ar_earnings_scale_line__create_date
 #: model:ir.model.fields,field_description:l10n_ar_withholding.field_l10n_ar_partner_tax__create_date
@@ -243,10 +291,31 @@ msgid "Customer Payment Withholding"
 msgstr "Retención Pago de Cliente"
 
 #. module: l10n_ar_withholding
+#: model:ir.model.fields,field_description:l10n_ar_withholding.field_account_fiscal_position_l10n_ar_tax__data_source
+msgid "Data Source"
+msgstr "Fuente de Datos"
+
+#. module: l10n_ar_withholding
+#: model:ir.model.fields,field_description:l10n_ar_withholding.field_account_fiscal_position_l10n_ar_tax__default_tax_id
+msgid "Default Tax"
+msgstr "Impuesto por Defecto"
+
+#. module: l10n_ar_withholding
+#: model:ir.model.fields,field_description:l10n_ar_withholding.field_account_chart_template__display_name
+#: model:ir.model.fields,field_description:l10n_ar_withholding.field_account_fiscal_position__display_name
+#: model:ir.model.fields,field_description:l10n_ar_withholding.field_account_fiscal_position_l10n_ar_tax__display_name
+#: model:ir.model.fields,field_description:l10n_ar_withholding.field_account_move__display_name
+#: model:ir.model.fields,field_description:l10n_ar_withholding.field_account_move_line__display_name
+#: model:ir.model.fields,field_description:l10n_ar_withholding.field_account_payment__display_name
+#: model:ir.model.fields,field_description:l10n_ar_withholding.field_account_payment_register__display_name
+#: model:ir.model.fields,field_description:l10n_ar_withholding.field_account_tax__display_name
 #: model:ir.model.fields,field_description:l10n_ar_withholding.field_l10n_ar_earnings_scale__display_name
 #: model:ir.model.fields,field_description:l10n_ar_withholding.field_l10n_ar_earnings_scale_line__display_name
 #: model:ir.model.fields,field_description:l10n_ar_withholding.field_l10n_ar_partner_tax__display_name
 #: model:ir.model.fields,field_description:l10n_ar_withholding.field_l10n_ar_payment_register_withholding__display_name
+#: model:ir.model.fields,field_description:l10n_ar_withholding.field_res_company__display_name
+#: model:ir.model.fields,field_description:l10n_ar_withholding.field_res_config_settings__display_name
+#: model:ir.model.fields,field_description:l10n_ar_withholding.field_res_partner__display_name
 msgid "Display Name"
 msgstr "Nombre para mostrar"
 
@@ -267,6 +336,13 @@ msgid "Earnings table scale if tax type is 'Earnings Scale'."
 msgstr ""
 "Tabla de escala de ganancias si el tipo de impuesto es 'Escala de "
 "ganancias'."
+
+#. module: l10n_ar_withholding
+#: model:ir.model,name:l10n_ar_withholding.model_account_fiscal_position
+#: model:ir.model.fields,field_description:l10n_ar_withholding.field_account_fiscal_position_l10n_ar_tax__fiscal_position_id
+#: model:ir.model.fields,field_description:l10n_ar_withholding.field_account_payment_register__l10n_ar_fiscal_position_id
+msgid "Fiscal Position"
+msgstr "Posición fiscal"
 
 #. module: l10n_ar_withholding
 #: model:ir.model.fields,field_description:l10n_ar_withholding.field_l10n_ar_earnings_scale_line__from_amount
@@ -292,11 +368,38 @@ msgstr ""
 "porcentaje de  dicha fila al resultado de la resta."
 
 #. module: l10n_ar_withholding
+#. odoo-python
+#: code:addons/l10n_ar_withholding/models/account_fiscal_position_l10n_ar_tax.py:0
+msgid "Getting withholding data from rentascordoba.gob.ar"
+msgstr "Obteniendo información desde rentascordoba.gob.ar"
+
+#. module: l10n_ar_withholding
+#: model:ir.model.fields,field_description:l10n_ar_withholding.field_account_chart_template__id
+#: model:ir.model.fields,field_description:l10n_ar_withholding.field_account_fiscal_position__id
+#: model:ir.model.fields,field_description:l10n_ar_withholding.field_account_fiscal_position_l10n_ar_tax__id
+#: model:ir.model.fields,field_description:l10n_ar_withholding.field_account_move__id
+#: model:ir.model.fields,field_description:l10n_ar_withholding.field_account_move_line__id
+#: model:ir.model.fields,field_description:l10n_ar_withholding.field_account_payment__id
+#: model:ir.model.fields,field_description:l10n_ar_withholding.field_account_payment_register__id
+#: model:ir.model.fields,field_description:l10n_ar_withholding.field_account_tax__id
 #: model:ir.model.fields,field_description:l10n_ar_withholding.field_l10n_ar_earnings_scale__id
 #: model:ir.model.fields,field_description:l10n_ar_withholding.field_l10n_ar_earnings_scale_line__id
 #: model:ir.model.fields,field_description:l10n_ar_withholding.field_l10n_ar_partner_tax__id
 #: model:ir.model.fields,field_description:l10n_ar_withholding.field_l10n_ar_payment_register_withholding__id
+#: model:ir.model.fields,field_description:l10n_ar_withholding.field_res_company__id
+#: model:ir.model.fields,field_description:l10n_ar_withholding.field_res_config_settings__id
+#: model:ir.model.fields,field_description:l10n_ar_withholding.field_res_partner__id
 msgid "ID"
+msgstr "Identificación"
+
+#. module: l10n_ar_withholding
+#: model:account.fiscal.position,name:l10n_ar_withholding.fiscal_position_cordoba
+msgid "IIBB Córdoba"
+msgstr ""
+
+#. module: l10n_ar_withholding
+#: model:account.fiscal.position,name:l10n_ar_withholding.fiscal_position_cordoba_and_proffits
+msgid "IIBB Córdoba + ganancias"
 msgstr ""
 
 #. module: l10n_ar_withholding
@@ -343,14 +446,20 @@ msgstr ""
 "impuesto entonces el monto final de retención es 0.0"
 
 #. module: l10n_ar_withholding
+#. odoo-python
+#: code:addons/l10n_ar_withholding/models/account_fiscal_position_l10n_ar_tax.py:0
+msgid "Invalid data source: %(data_source)s"
+msgstr "Fuente de información inválida: %(data_source)s"
+
+#. module: l10n_ar_withholding
 #: model:ir.model,name:l10n_ar_withholding.model_account_move
 msgid "Journal Entry"
 msgstr "Asiento contable"
 
 #. module: l10n_ar_withholding
-#: model:ir.model.fields,field_description:l10n_ar_withholding.field_account_tax__l10n_ar_state_id
-msgid "Jurisdiction"
-msgstr "Provincia"
+#: model:ir.model,name:l10n_ar_withholding.model_account_move_line
+msgid "Journal Item"
+msgstr "Apunte contable"
 
 #. module: l10n_ar_withholding
 #: model:ir.model.fields,field_description:l10n_ar_withholding.field_account_payment_register__l10n_ar_adjustment_warning
@@ -363,6 +472,12 @@ msgid "L10N Ar Net Amount"
 msgstr "Cantidad neta L10N Ar"
 
 #. module: l10n_ar_withholding
+#: model:ir.model.fields,field_description:l10n_ar_withholding.field_account_fiscal_position__l10n_ar_tax_ids
+msgid "L10N Ar Tax"
+msgstr ""
+
+#. module: l10n_ar_withholding
+#: model:ir.model.fields,field_description:l10n_ar_withholding.field_account_fiscal_position_l10n_ar_tax__write_uid
 #: model:ir.model.fields,field_description:l10n_ar_withholding.field_l10n_ar_earnings_scale__write_uid
 #: model:ir.model.fields,field_description:l10n_ar_withholding.field_l10n_ar_earnings_scale_line__write_uid
 #: model:ir.model.fields,field_description:l10n_ar_withholding.field_l10n_ar_partner_tax__write_uid
@@ -371,6 +486,7 @@ msgid "Last Updated by"
 msgstr "Última actualización por"
 
 #. module: l10n_ar_withholding
+#: model:ir.model.fields,field_description:l10n_ar_withholding.field_account_fiscal_position_l10n_ar_tax__write_date
 #: model:ir.model.fields,field_description:l10n_ar_withholding.field_l10n_ar_earnings_scale__write_date
 #: model:ir.model.fields,field_description:l10n_ar_withholding.field_l10n_ar_earnings_scale_line__write_date
 #: model:ir.model.fields,field_description:l10n_ar_withholding.field_l10n_ar_partner_tax__write_date
@@ -460,6 +576,16 @@ msgstr ""
 "inmediato anterior a la columna 'S/ Exced. from $'."
 
 #. module: l10n_ar_withholding
+#: model:ir.model.fields.selection,name:l10n_ar_withholding.selection__account_fiscal_position_l10n_ar_tax__tax_type__perception
+msgid "Perception"
+msgstr "Percepción"
+
+#. module: l10n_ar_withholding
+#: model_terms:ir.ui.view,arch_db:l10n_ar_withholding.view_account_position_form
+msgid "Perceptions and Withholdings"
+msgstr "Percepciones e Impuestos"
+
+#. module: l10n_ar_withholding
 #. odoo-python
 #: code:addons/l10n_ar_withholding/wizards/account_payment_register.py:0
 msgid "Please enter withholding number for tax %s"
@@ -476,9 +602,19 @@ msgid "Purchases"
 msgstr "Compras"
 
 #. module: l10n_ar_withholding
+#: model:account.fiscal.position,name:l10n_ar_withholding.fiscal_position_proffits
+msgid "Ret. ganancias"
+msgstr ""
+
+#. module: l10n_ar_withholding
 #: model:ir.model.fields,field_description:l10n_ar_withholding.field_l10n_ar_earnings_scale_line__excess_amount
 msgid "S/ Exceeding $"
 msgstr "S/ Excedente de $"
+
+#. module: l10n_ar_withholding
+#: model_terms:ir.ui.view,arch_db:l10n_ar_withholding.view_partner_form
+msgid "Sale Perceptions"
+msgstr "Percepciones de Ventas"
 
 #. module: l10n_ar_withholding
 #: model:ir.model.fields.selection,name:l10n_ar_withholding.selection__account_tax__l10n_ar_type_tax_use__sale
@@ -511,6 +647,12 @@ msgid "Tax Base Account"
 msgstr "Cuenta del impuesto base"
 
 #. module: l10n_ar_withholding
+#: model:ir.model.fields,field_description:l10n_ar_withholding.field_account_fiscal_position_l10n_ar_tax__tax_template_domain
+msgid "Tax Template Domain"
+msgstr "Dominio de Plantilla de Impuestos"
+
+#. module: l10n_ar_withholding
+#: model:ir.model.fields,field_description:l10n_ar_withholding.field_account_fiscal_position_l10n_ar_tax__tax_type
 #: model_terms:ir.ui.view,arch_db:l10n_ar_withholding.view_tax_form-l10n_ar
 msgid "Tax Type"
 msgstr "Tipo de Impuesto"
@@ -519,6 +661,15 @@ msgstr "Tipo de Impuesto"
 #: model:ir.model.fields,help:l10n_ar_withholding.field_l10n_ar_payment_register_withholding__currency_id
 msgid "The payment's currency."
 msgstr "La moneda del pago."
+
+#. module: l10n_ar_withholding
+#. odoo-python
+#: code:addons/l10n_ar_withholding/models/account_fiscal_position_l10n_ar_tax.py:0
+msgid ""
+"The tax rate cannot be automatically retrieved for the date %(date)s. Please"
+" enter it manually in the partner."
+msgstr "La alícuota de impuesto no puede ser automáticamente obtenida para la fecha %(date)s. Por favor"
+" ingrésela manualmente en el contacto."
 
 #. module: l10n_ar_withholding
 #: model:ir.model.fields,help:l10n_ar_withholding.field_l10n_ar_earnings_scale_line__to_amount
@@ -530,6 +681,30 @@ msgstr ""
 "El monto imponible (monto base + montos bases aplicados este mes al mismo "
 "impuesto y al mismo contacto - mínimo no imponible) debe estar entre el "
 "monto en columna 'S/ Exced' y monto $' y el monto de esta columna."
+
+#. module: l10n_ar_withholding
+#. odoo-python
+#: code:addons/l10n_ar_withholding/models/account_fiscal_position_l10n_ar_tax.py:0
+msgid ""
+"There cannot be two taxes from the same group for the same tax position."
+msgstr ""
+"No puede haber dos impuestos del mismo grupo para la misma posición fiscal."
+
+#. module: l10n_ar_withholding
+#. odoo-python
+#: code:addons/l10n_ar_withholding/models/l10n_ar_partner_tax.py:0
+msgid ""
+"There cannot be two taxes from the same group in force at the same time for the same company. Maybe there is a tax that needs 'To Date' to be set. More information:\n"
+"* Tax: %(tax_name)s\n"
+"* To Date: %(date)s\n"
+"* From Date: %(from_date)s\n"
+"* Other Taxes: %(other_taxes)s\n"
+msgstr ""
+"No puede haber dos impuestos del mismo grupo vigentes al mismo tiempo para la misma empresa. Tal vez hay un impuesto que necesita que se establezca 'Fecha hasta'. Más información:\n"
+"* Impuesto: %(tax_name)s\n"
+"* Fecha hasta: %(date)s\n"
+"* Fecha desde: %(from_date)s\n"
+"* Otros impuestos: %(other_taxes)s\n"
 
 #. module: l10n_ar_withholding
 #: model:ir.model.fields,field_description:l10n_ar_withholding.field_l10n_ar_earnings_scale_line__to_amount
@@ -590,6 +765,12 @@ msgid "WTH Tax"
 msgstr "Impuesto de retención"
 
 #. module: l10n_ar_withholding
+#: model:ir.model.fields.selection,name:l10n_ar_withholding.selection__account_fiscal_position_l10n_ar_tax__data_source__data_source_cordoba
+msgid "Web Service Córdoba"
+msgstr ""
+
+#. module: l10n_ar_withholding
+#: model:ir.model.fields.selection,name:l10n_ar_withholding.selection__account_fiscal_position_l10n_ar_tax__tax_type__withholding
 #: model_terms:ir.ui.view,arch_db:l10n_ar_withholding.res_config_settings_view_form
 msgid "Withholding"
 msgstr "Retención"
@@ -609,6 +790,12 @@ msgstr ""
 "Monto de retención = (Monto base - monto inmediato previo anterior a la "
 "columna 'S/ Excedente de $') * porcentaje de la fila / 100 + monto fijo de "
 "la fila (columna '$')"
+
+#. module: l10n_ar_withholding
+#. odoo-python
+#: code:addons/l10n_ar_withholding/wizards/account_payment_register.py:0
+msgid "Withholding computation detail: <ul>%(withholding_refs)s</ul>"
+msgstr "Detalle del cómputo de retenciones: <ul>%(withholding_refs)s</ul>"
 
 #. module: l10n_ar_withholding
 #: model:ir.model.fields,help:l10n_ar_withholding.field_account_tax__l10n_ar_withholding_payment_type
@@ -633,6 +820,23 @@ msgid ""
 msgstr ""
 "No puede registrar retenciones al pagar facturas de diferentes contactos o "
 "del mismo contacto sin agrupar"
+
+#. module: l10n_ar_withholding
+#. odoo-python
+#: code:addons/l10n_ar_withholding/models/account_tax.py:0
+msgid ""
+"You cannot delete these taxes because they are set as default "
+"perception/withholding taxes in the fiscal positions of the following "
+"companies: %(company_names)s"
+msgstr ""
+"No puede eliminar estos impuestos porque están configurados como impuestos "
+"predeterminados de percepción/retención en las posiciones fiscales de las "
+"siguientes compañías: %(company_names)s"
+
+#. module: l10n_ar_withholding
+#: model:ir.model,name:l10n_ar_withholding.model_account_fiscal_position_l10n_ar_tax
+msgid "account.fiscal.position.l10n_ar_tax"
+msgstr ""
 
 #. module: l10n_ar_withholding
 #: model:ir.model,name:l10n_ar_withholding.model_l10n_ar_earnings_scale
