--- a/addons/l10n_ar_withholding/i18n/l10n_ar_withholding.pot
+++ b/addons/l10n_ar_withholding/i18n/l10n_ar_withholding.pot
@@ -22,6 +22,31 @@ msgid "\"From date\" must be lower than \"To date\" on Withholding (AR) taxes."
 msgstr ""
 
 #. module: l10n_ar_withholding
+#. odoo-python
+#: code:addons/l10n_ar_withholding/wizards/l10n_ar_payment_register_withholding.py:0
+msgid ""
+"%(base_amount)s + %(same_period_base)s - %(non_taxable_amount)s = %(result)s"
+" (it should not be applied)"
+msgstr ""
+
+#. module: l10n_ar_withholding
+#. odoo-python
+#: code:addons/l10n_ar_withholding/wizards/l10n_ar_payment_register_withholding.py:0
+msgid ""
+"(Base amount + Accumulated base from previous payments - Non-taxable minimum"
+" - Scale threshold) * Scale rate + Fixed amount (from scale) - Withholdings "
+"already applied during the period"
+msgstr ""
+
+#. module: l10n_ar_withholding
+#. odoo-python
+#: code:addons/l10n_ar_withholding/wizards/l10n_ar_payment_register_withholding.py:0
+msgid ""
+"(Base amount + Accumulated base from previous payments - Non-taxable "
+"minimum) * Rate - Withholdings already applied during the period"
+msgstr ""
+
+#. module: l10n_ar_withholding
 #: model_terms:ir.ui.view,arch_db:l10n_ar_withholding.view_afip_earnings_table_scale_form
 msgid ""
 "<b><u>AFIP Sources</u></b><br/>\n"
@@ -38,6 +63,14 @@ msgstr ""
 msgid ""
 "<br/>\n"
 "                    <span>Link to AFIP aditional info: </span>"
+msgstr ""
+
+#. module: l10n_ar_withholding
+#. odoo-python
+#: code:addons/l10n_ar_withholding/wizards/l10n_ar_payment_register_withholding.py:0
+msgid ""
+"<li title=\"Calculation formula: %(formula_str)s\">%(tax_name)s: "
+"%(ref)s</li>"
 msgstr ""
 
 #. module: l10n_ar_withholding
@@ -135,6 +168,12 @@ msgid "Argentinean Partner Taxes"
 msgstr ""
 
 #. module: l10n_ar_withholding
+#: model:ir.model.fields,field_description:l10n_ar_withholding.field_res_partner__l10n_ar_partner_perception_ids
+#: model:ir.model.fields,field_description:l10n_ar_withholding.field_res_users__l10n_ar_partner_perception_ids
+msgid "Argentinean Perception Taxes"
+msgstr ""
+
+#. module: l10n_ar_withholding
 #: model:ir.model.fields,field_description:l10n_ar_withholding.field_res_partner__l10n_ar_partner_tax_ids
 #: model:ir.model.fields,field_description:l10n_ar_withholding.field_res_users__l10n_ar_partner_tax_ids
 msgid "Argentinean Withholding Taxes"
@@ -190,6 +229,7 @@ msgid "Contact"
 msgstr ""
 
 #. module: l10n_ar_withholding
+#: model:ir.model.fields,field_description:l10n_ar_withholding.field_account_fiscal_position_l10n_ar_tax__create_uid
 #: model:ir.model.fields,field_description:l10n_ar_withholding.field_l10n_ar_earnings_scale__create_uid
 #: model:ir.model.fields,field_description:l10n_ar_withholding.field_l10n_ar_earnings_scale_line__create_uid
 #: model:ir.model.fields,field_description:l10n_ar_withholding.field_l10n_ar_partner_tax__create_uid
@@ -198,6 +238,7 @@ msgid "Created by"
 msgstr ""
 
 #. module: l10n_ar_withholding
+#: model:ir.model.fields,field_description:l10n_ar_withholding.field_account_fiscal_position_l10n_ar_tax__create_date
 #: model:ir.model.fields,field_description:l10n_ar_withholding.field_l10n_ar_earnings_scale__create_date
 #: model:ir.model.fields,field_description:l10n_ar_withholding.field_l10n_ar_earnings_scale_line__create_date
 #: model:ir.model.fields,field_description:l10n_ar_withholding.field_l10n_ar_partner_tax__create_date
@@ -222,10 +263,31 @@ msgid "Customer Payment Withholding"
 msgstr ""
 
 #. module: l10n_ar_withholding
+#: model:ir.model.fields,field_description:l10n_ar_withholding.field_account_fiscal_position_l10n_ar_tax__data_source
+msgid "Data Source"
+msgstr ""
+
+#. module: l10n_ar_withholding
+#: model:ir.model.fields,field_description:l10n_ar_withholding.field_account_fiscal_position_l10n_ar_tax__default_tax_id
+msgid "Default Tax"
+msgstr ""
+
+#. module: l10n_ar_withholding
+#: model:ir.model.fields,field_description:l10n_ar_withholding.field_account_chart_template__display_name
+#: model:ir.model.fields,field_description:l10n_ar_withholding.field_account_fiscal_position__display_name
+#: model:ir.model.fields,field_description:l10n_ar_withholding.field_account_fiscal_position_l10n_ar_tax__display_name
+#: model:ir.model.fields,field_description:l10n_ar_withholding.field_account_move__display_name
+#: model:ir.model.fields,field_description:l10n_ar_withholding.field_account_move_line__display_name
+#: model:ir.model.fields,field_description:l10n_ar_withholding.field_account_payment__display_name
+#: model:ir.model.fields,field_description:l10n_ar_withholding.field_account_payment_register__display_name
+#: model:ir.model.fields,field_description:l10n_ar_withholding.field_account_tax__display_name
 #: model:ir.model.fields,field_description:l10n_ar_withholding.field_l10n_ar_earnings_scale__display_name
 #: model:ir.model.fields,field_description:l10n_ar_withholding.field_l10n_ar_earnings_scale_line__display_name
 #: model:ir.model.fields,field_description:l10n_ar_withholding.field_l10n_ar_partner_tax__display_name
 #: model:ir.model.fields,field_description:l10n_ar_withholding.field_l10n_ar_payment_register_withholding__display_name
+#: model:ir.model.fields,field_description:l10n_ar_withholding.field_res_company__display_name
+#: model:ir.model.fields,field_description:l10n_ar_withholding.field_res_config_settings__display_name
+#: model:ir.model.fields,field_description:l10n_ar_withholding.field_res_partner__display_name
 msgid "Display Name"
 msgstr ""
 
@@ -243,6 +305,13 @@ msgstr ""
 #. module: l10n_ar_withholding
 #: model:ir.model.fields,help:l10n_ar_withholding.field_account_tax__l10n_ar_scale_id
 msgid "Earnings table scale if tax type is 'Earnings Scale'."
+msgstr ""
+
+#. module: l10n_ar_withholding
+#: model:ir.model,name:l10n_ar_withholding.model_account_fiscal_position
+#: model:ir.model.fields,field_description:l10n_ar_withholding.field_account_fiscal_position_l10n_ar_tax__fiscal_position_id
+#: model:ir.model.fields,field_description:l10n_ar_withholding.field_account_payment_register__l10n_ar_fiscal_position_id
+msgid "Fiscal Position"
 msgstr ""
 
 #. module: l10n_ar_withholding
@@ -265,11 +334,38 @@ msgid ""
 msgstr ""
 
 #. module: l10n_ar_withholding
+#. odoo-python
+#: code:addons/l10n_ar_withholding/models/account_fiscal_position_l10n_ar_tax.py:0
+msgid "Getting withholding data from rentascordoba.gob.ar"
+msgstr ""
+
+#. module: l10n_ar_withholding
+#: model:ir.model.fields,field_description:l10n_ar_withholding.field_account_chart_template__id
+#: model:ir.model.fields,field_description:l10n_ar_withholding.field_account_fiscal_position__id
+#: model:ir.model.fields,field_description:l10n_ar_withholding.field_account_fiscal_position_l10n_ar_tax__id
+#: model:ir.model.fields,field_description:l10n_ar_withholding.field_account_move__id
+#: model:ir.model.fields,field_description:l10n_ar_withholding.field_account_move_line__id
+#: model:ir.model.fields,field_description:l10n_ar_withholding.field_account_payment__id
+#: model:ir.model.fields,field_description:l10n_ar_withholding.field_account_payment_register__id
+#: model:ir.model.fields,field_description:l10n_ar_withholding.field_account_tax__id
 #: model:ir.model.fields,field_description:l10n_ar_withholding.field_l10n_ar_earnings_scale__id
 #: model:ir.model.fields,field_description:l10n_ar_withholding.field_l10n_ar_earnings_scale_line__id
 #: model:ir.model.fields,field_description:l10n_ar_withholding.field_l10n_ar_partner_tax__id
 #: model:ir.model.fields,field_description:l10n_ar_withholding.field_l10n_ar_payment_register_withholding__id
+#: model:ir.model.fields,field_description:l10n_ar_withholding.field_res_company__id
+#: model:ir.model.fields,field_description:l10n_ar_withholding.field_res_config_settings__id
+#: model:ir.model.fields,field_description:l10n_ar_withholding.field_res_partner__id
 msgid "ID"
+msgstr ""
+
+#. module: l10n_ar_withholding
+#: model:account.fiscal.position,name:l10n_ar_withholding.fiscal_position_cordoba
+msgid "IIBB Córdoba"
+msgstr ""
+
+#. module: l10n_ar_withholding
+#: model:account.fiscal.position,name:l10n_ar_withholding.fiscal_position_cordoba_and_proffits
+msgid "IIBB Córdoba + ganancias"
 msgstr ""
 
 #. module: l10n_ar_withholding
@@ -310,13 +406,19 @@ msgid ""
 msgstr ""
 
 #. module: l10n_ar_withholding
+#. odoo-python
+#: code:addons/l10n_ar_withholding/models/account_fiscal_position_l10n_ar_tax.py:0
+msgid "Invalid data source: %(data_source)s"
+msgstr ""
+
+#. module: l10n_ar_withholding
 #: model:ir.model,name:l10n_ar_withholding.model_account_move
 msgid "Journal Entry"
 msgstr ""
 
 #. module: l10n_ar_withholding
-#: model:ir.model.fields,field_description:l10n_ar_withholding.field_account_tax__l10n_ar_state_id
-msgid "Jurisdiction"
+#: model:ir.model,name:l10n_ar_withholding.model_account_move_line
+msgid "Journal Item"
 msgstr ""
 
 #. module: l10n_ar_withholding
@@ -330,6 +432,12 @@ msgid "L10N Ar Net Amount"
 msgstr ""
 
 #. module: l10n_ar_withholding
+#: model:ir.model.fields,field_description:l10n_ar_withholding.field_account_fiscal_position__l10n_ar_tax_ids
+msgid "L10N Ar Tax"
+msgstr ""
+
+#. module: l10n_ar_withholding
+#: model:ir.model.fields,field_description:l10n_ar_withholding.field_account_fiscal_position_l10n_ar_tax__write_uid
 #: model:ir.model.fields,field_description:l10n_ar_withholding.field_l10n_ar_earnings_scale__write_uid
 #: model:ir.model.fields,field_description:l10n_ar_withholding.field_l10n_ar_earnings_scale_line__write_uid
 #: model:ir.model.fields,field_description:l10n_ar_withholding.field_l10n_ar_partner_tax__write_uid
@@ -338,6 +446,7 @@ msgid "Last Updated by"
 msgstr ""
 
 #. module: l10n_ar_withholding
+#: model:ir.model.fields,field_description:l10n_ar_withholding.field_account_fiscal_position_l10n_ar_tax__write_date
 #: model:ir.model.fields,field_description:l10n_ar_withholding.field_l10n_ar_earnings_scale__write_date
 #: model:ir.model.fields,field_description:l10n_ar_withholding.field_l10n_ar_earnings_scale_line__write_date
 #: model:ir.model.fields,field_description:l10n_ar_withholding.field_l10n_ar_partner_tax__write_date
@@ -424,6 +533,16 @@ msgid ""
 msgstr ""
 
 #. module: l10n_ar_withholding
+#: model:ir.model.fields.selection,name:l10n_ar_withholding.selection__account_fiscal_position_l10n_ar_tax__tax_type__perception
+msgid "Perception"
+msgstr ""
+
+#. module: l10n_ar_withholding
+#: model_terms:ir.ui.view,arch_db:l10n_ar_withholding.view_account_position_form
+msgid "Perceptions and Withholdings"
+msgstr ""
+
+#. module: l10n_ar_withholding
 #. odoo-python
 #: code:addons/l10n_ar_withholding/wizards/account_payment_register.py:0
 msgid "Please enter withholding number for tax %s"
@@ -440,8 +559,18 @@ msgid "Purchases"
 msgstr ""
 
 #. module: l10n_ar_withholding
+#: model:account.fiscal.position,name:l10n_ar_withholding.fiscal_position_proffits
+msgid "Ret. ganancias"
+msgstr ""
+
+#. module: l10n_ar_withholding
 #: model:ir.model.fields,field_description:l10n_ar_withholding.field_l10n_ar_earnings_scale_line__excess_amount
 msgid "S/ Exceeding $"
+msgstr ""
+
+#. module: l10n_ar_withholding
+#: model_terms:ir.ui.view,arch_db:l10n_ar_withholding.view_partner_form
+msgid "Sale Perceptions"
 msgstr ""
 
 #. module: l10n_ar_withholding
@@ -475,6 +604,12 @@ msgid "Tax Base Account"
 msgstr ""
 
 #. module: l10n_ar_withholding
+#: model:ir.model.fields,field_description:l10n_ar_withholding.field_account_fiscal_position_l10n_ar_tax__tax_template_domain
+msgid "Tax Template Domain"
+msgstr ""
+
+#. module: l10n_ar_withholding
+#: model:ir.model.fields,field_description:l10n_ar_withholding.field_account_fiscal_position_l10n_ar_tax__tax_type
 #: model_terms:ir.ui.view,arch_db:l10n_ar_withholding.view_tax_form-l10n_ar
 msgid "Tax Type"
 msgstr ""
@@ -485,11 +620,37 @@ msgid "The payment's currency."
 msgstr ""
 
 #. module: l10n_ar_withholding
+#. odoo-python
+#: code:addons/l10n_ar_withholding/models/account_fiscal_position_l10n_ar_tax.py:0
+msgid ""
+"The tax rate cannot be automatically retrieved for the date %(date)s. Please"
+" enter it manually in the partner."
+msgstr ""
+
+#. module: l10n_ar_withholding
 #: model:ir.model.fields,help:l10n_ar_withholding.field_l10n_ar_earnings_scale_line__to_amount
 msgid ""
 "The taxable amount (tax base + tax bases applied this month to same tax and "
 "partner - non-taxable minimum) must be between the amount in the 'S/ Exced' "
 "column. of $' and the amount of this column."
+msgstr ""
+
+#. module: l10n_ar_withholding
+#. odoo-python
+#: code:addons/l10n_ar_withholding/models/account_fiscal_position_l10n_ar_tax.py:0
+msgid ""
+"There cannot be two taxes from the same group for the same tax position."
+msgstr ""
+
+#. module: l10n_ar_withholding
+#. odoo-python
+#: code:addons/l10n_ar_withholding/models/l10n_ar_partner_tax.py:0
+msgid ""
+"There cannot be two taxes from the same group in force at the same time for the same company. Maybe there is a tax that needs 'To Date' to be set. More information:\n"
+"* Tax: %(tax_name)s\n"
+"* To Date: %(date)s\n"
+"* From Date: %(from_date)s\n"
+"* Other Taxes: %(other_taxes)s\n"
 msgstr ""
 
 #. module: l10n_ar_withholding
@@ -545,6 +706,12 @@ msgid "WTH Tax"
 msgstr ""
 
 #. module: l10n_ar_withholding
+#: model:ir.model.fields.selection,name:l10n_ar_withholding.selection__account_fiscal_position_l10n_ar_tax__data_source__data_source_cordoba
+msgid "Web Service Córdoba"
+msgstr ""
+
+#. module: l10n_ar_withholding
+#: model:ir.model.fields.selection,name:l10n_ar_withholding.selection__account_fiscal_position_l10n_ar_tax__tax_type__withholding
 #: model_terms:ir.ui.view,arch_db:l10n_ar_withholding.res_config_settings_view_form
 msgid "Withholding"
 msgstr ""
@@ -560,6 +727,12 @@ msgid ""
 "Withholding amount = (Base amount - immediately previous amount of the "
 "column 'S/ Exceeding $') * row percentage / 100 + row fixed amount ('$' "
 "column)"
+msgstr ""
+
+#. module: l10n_ar_withholding
+#. odoo-python
+#: code:addons/l10n_ar_withholding/wizards/account_payment_register.py:0
+msgid "Withholding computation detail: <ul>%(withholding_refs)s</ul>"
 msgstr ""
 
 #. module: l10n_ar_withholding
@@ -582,6 +755,20 @@ msgstr ""
 msgid ""
 "You can't register withholdings when paying invoices of different partners "
 "or same partner without grouping"
+msgstr ""
+
+#. module: l10n_ar_withholding
+#. odoo-python
+#: code:addons/l10n_ar_withholding/models/account_tax.py:0
+msgid ""
+"You cannot delete these taxes because they are set as default "
+"perception/withholding taxes in the fiscal positions of the following "
+"companies: %(company_names)s"
+msgstr ""
+
+#. module: l10n_ar_withholding
+#: model:ir.model,name:l10n_ar_withholding.model_account_fiscal_position_l10n_ar_tax
+msgid "account.fiscal.position.l10n_ar_tax"
 msgstr ""
 
 #. module: l10n_ar_withholding
